<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_hello">Привет, Практикум!</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="link_for_app_share">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_for_support">bespalov.m.9@ya.ru</string>
    <string name="email_theme_for_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text_for_support">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_implicit_intent_error">Произошла ошибка, возможно нет подходящего приложения</string>

    <string name="search">Поиск</string>
    <string name="refresh">Обновить</string>
    <string name="search_screen_placeholder_text_error">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_screen_placeholder_text_not_found">Ничего не нашлось</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="default_timer_value">00:00</string>
    <string name="search_screen_to_player_screen_track_as_json">TRACK_JSON</string>
    <string name="player_screen_toast_added">Трек %1$s добавлен в плейлист %2$s</string>
    <string name="player_screen_toast_not_added">Трек %1$s уже добавлен в плейлист %2$s</string>
    <string name="error_view_size_mode">Неизвестный режим ширины/высоты %1$s</string>
    <string name="no_internet_message">Отсутствует подключение к интернету</string>
    <string name="notification_placeholder">%1$s - %2$s</string>
    <string name="no_notification_permission">Отсутствует разрешение на показ уведомлений</string>
    <string name="player_notification_channel_name">Уведомление плеера</string>

    <string name="mediateka">Медиатека</string>
    <string name="favorite_tracks_screen_placeholder_text">Ваша медиатека пуста</string>
    <string name="playlist_screen_placeholder_text">Вы не создали \nни одного плейлиста</string>
    <string name="playlist_screen_placeholder_button">Новый плейлист</string>

    <string name="mediateka_screen_tab_title_favorite_tracks">Избранные треки</string>
    <string name="mediateka_screen_tab_title_playlists">Плейлисты</string>

    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_name">Название*</string>
    <string name="Description">Описание</string>
    <string name="Create">Создать</string>
    <string name="Cancel">Отмена</string>
    <string name="Complete">Завершить</string>
    <string name="delete">Удалить</string>

    <string name="newplaylist_screen_dialog_title">Завершить создание плейлиста?</string>
    <string name="newplaylist_screen_dialog_message">Все несохраненные данные будут потеряны</string>

    <string name="playlist_screen_dialog">Плейлист %1$s создан!</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="number_of_tracks">%1$s треков</string>
    <string name="number_of_minutes">%1$s минут</string>

    <string name="playlistdetails_screen_dialog_title">Удалить трек</string>
    <string name="playlistdetails_screen_dialog_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="playlistdetails_screen_nothing_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlistdetails_no_tracks">В этом плейлисте нет списка треков</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

</resources>