<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="@dimen/back_arrow_size"
            android:layout_height="@dimen/back_arrow_size"
            android:layout_marginTop="11dp"
            android:src="@drawable/ic_arrow_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="48sp"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_padding_settings_screen"
        android:paddingVertical="@dimen/vertical_padding_settings_screen"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="18sp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_padding_settings_screen"
        android:paddingVertical="@dimen/vertical_padding_settings_screen"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="18sp"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="@dimen/ic_settings_size"
            android:layout_height="@dimen/ic_settings_size"
            android:layout_gravity="end"
            android:src="@drawable/ic_share"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_padding_settings_screen"
        android:paddingVertical="@dimen/vertical_padding_settings_screen"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="18sp"
            android:text="@string/contact_support"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="@dimen/ic_settings_size"
            android:layout_height="@dimen/ic_settings_size"
            android:layout_gravity="end"
            android:src="@drawable/ic_support"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/horizontal_padding_settings_screen"
        android:paddingVertical="@dimen/vertical_padding_settings_screen"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineHeight="18sp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="@dimen/ic_settings_size"
            android:layout_height="@dimen/ic_settings_size"
            android:layout_gravity="end"
            android:src="@drawable/ic_arrow"
            />

    </FrameLayout>

</LinearLayout>