<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screen_title_textview"
        style="@style/screen_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/settings_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/horizontal_padding_settings_screen" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/settings_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/horizontal_padding_settings_screen" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settings_screen_theme_switcher"
        style="@style/settings_activity_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dark_theme"
        app:layout_constraintEnd_toStartOf="@id/settings_guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/settings_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/screen_title_textview" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/settings_screen_section_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="settings_screen_text_view_share, settings_screen_icon_share"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/settings_screen_text_view_share"
        style="@style/settings_activity_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_app"
        app:layout_constraintEnd_toStartOf="@id/settings_screen_icon_share"
        app:layout_constraintStart_toStartOf="@id/settings_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_theme_switcher" />

    <ImageView
        android:id="@+id/settings_screen_icon_share"
        style="@style/settings_activity_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@id/settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/settings_screen_text_view_share"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_theme_switcher" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/settings_screen_section_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="settings_screen_text_view_support, settings_screen_icon_support"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/settings_screen_text_view_support"
        style="@style/settings_activity_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact_support"
        app:layout_constraintEnd_toStartOf="@id/settings_screen_icon_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/settings_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_text_view_share" />

    <ImageView
        android:id="@+id/settings_screen_icon_support"
        style="@style/settings_activity_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_support"
        app:layout_constraintEnd_toStartOf="@id/settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/settings_screen_text_view_support"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_icon_share" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/settings_screen_section_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="settings_screen_text_view_user_agreement, settings_screen_icon_agreement"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/settings_screen_text_view_user_agreement"
        style="@style/settings_activity_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_agreement"
        app:layout_constraintEnd_toStartOf="@+id/settings_screen_icon_share"
        app:layout_constraintStart_toStartOf="@id/settings_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_text_view_support" />

    <ImageView
        android:id="@+id/settings_screen_icon_agreement"
        style="@style/settings_activity_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        app:layout_constraintEnd_toStartOf="@id/settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/settings_screen_text_view_user_agreement"
        app:layout_constraintTop_toBottomOf="@id/settings_screen_icon_support" />

</androidx.constraintlayout.widget.ConstraintLayout>